--- a/css/admin.css
+++ b/css/admin.css
@@ -1,9 +1,9 @@
 body {
-    height: 99%;
+    height: 100vw;
     width: 100%;
     background-image: url("../img/bg.png");
-    -webkit-backdrop-filter: blur(10px);
-            backdrop-filter: blur(10px);
+    /* -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px); */
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: 99% 150%;
@@ -24,3 +24,74 @@ p {
     margin-left: 100px;
     margin-right: 100px;
 }
+
+/* Kostia update */
+
+
+.calc-head {
+	max-width: 1180px;
+	padding-top: 15px;
+	margin: 0 auto;
+  }
+.logo {
+	float: left;
+	height: 130px;
+	width: 216px;
+	background-image: url(../img/logo.svg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	margin-left: 7%;
+  }
+.hello {
+	float: right;
+	margin-right: 7%;
+  }
+.hello input {
+	height: 25px;
+	width: 120px;
+	cursor: pointer;
+	margin-bottom: 7px;
+  }
+
+  .clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.admin-rule {
+  max-width: 900px;
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+}
+
+.admin-rule .item {
+    text-align: center;
+
+}
+
+.admin-rule .item:hover {
+    text-align: center;
+    border: 2px solid gray;
+}
+
+.admin-rule .item span {
+    color: #495F1D;
+    text-align: center;
+    font-size: 29px;
+}
+
+.admin-rule a {
+    max-width: 900px;
+   text-decoration: none;
+  }
+
+  @media screen and (max-width: 620px) {
+    .admin-rule {
+        flex-direction: column;
+    }
+
+    body {
+        height: 100%;    }
+  }
