--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,52 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .bg {
-  height: 950px;
+  height: 100vw;
   background-image: url("../img/bg.png");
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   background-position: 0 0;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
+  text-align: center;
+}
+.bg p {
+  padding-top: 30px;
+  -webkit-margin-before: 0em;
+          margin-block-start: 0em;
+  -webkit-margin-after: 0em;
+          margin-block-end: 0em;
+  font-family: "Roboto", sans-serif;
+  font-size: 1em;
+}
+.bg .calc-head {
+  max-width: 1180px;
+  padding-top: 15px;
+  margin: 0 auto;
+}
+.bg .logo {
+  float: left;
+  height: 126px;
+  width: 216px;
+  background-image: url(../img/logo.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-left: 7%;
+}
+.bg .hello {
+  float: right;
+  margin-right: 7%;
+}
+.bg .hello input {
+  height: 25px;
+  width: 120px;
+  cursor: pointer;
+  margin-bottom: 7px;
 }
 
 h2 {
@@ -18,7 +58,7 @@ h2 {
           margin-block-end: 0;
   font-weight: 700;
   margin-bottom: 30px;
-  font-size: 65px;
+  font-size: 3em;
   color: #555;
   text-align: center;
   font-family: "Roboto", sans-serif;
@@ -29,14 +69,16 @@ h2 {
   justify-content: space-around;
   max-width: 1180px;
   margin: 0 auto;
+  text-align: left;
 }
 .form-block #submit {
   position: absolute;
-  top: 50%;
+  top: 600px;
   left: calc(50% - 125px);
   width: 250px;
   height: 40px;
   font-family: "Roboto";
+  cursor: pointer;
 }
 .form-block input {
   margin-right: 0.75em;
@@ -49,4 +91,36 @@ h2 {
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
+}
+
+@media screen and (max-width: 900px) {
+  .form-block {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
+    align-items: flex-start;
+  }
+  .form-block div {
+    margin: 0 auto;
+    min-width: 200px;
+  }
+  .form-block #submit {
+    position: inherit;
+    top: 50%;
+    left: calc(50% - 125px);
+    width: 250px;
+    height: 40px;
+    font-family: "Roboto";
+    margin-top: 39px;
+    margin-left: 70%;
+  }
+  .bg {
+    height: 100%;
+  }
+}
+@media screen and (max-width: 620px) {
+  .form-block #submit {
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 100px;
+  }
 }/*# sourceMappingURL=style.css.map */
