--- a/css/style.scss
+++ b/css/style.scss
@@ -1,19 +1,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-body {
-   
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .bg {
-    height: 950px;
+    height: 100vw;
+    // min-height: 950px;
     background-image: url('../img/bg.png');
     backdrop-filter: blur(10px);
     // backdrop-filter: opacity(20%);
     background-position: 0 0;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
- 
-}
+    background-size: cover;
+    text-align: center;
+
+    p {
+        padding-top: 30px;
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+        font-family: 'Roboto', sans-serif;
+        font-size: 1em;
+    }
+
+    .calc-head {
+        
+        max-width: 1180px;
+        padding-top: 15px;
+        margin: 0 auto;
+    }
+        
+        .logo {
+            float: left;
+            height: 126px;
+            width: 216px;
+            background-image: url(../img/logo.svg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            margin-left: 7%;   
+        }
+
+        .hello {
+            float: right;
+            margin-right: 7%;
+
+            input {
+                height: 25px;
+                width: 120px;
+                cursor: pointer;
+                margin-bottom: 7px;
+            }
+            
+        }
+    }
+
 
 h2 {
     box-sizing: border-box;
@@ -22,7 +65,7 @@ h2 {
     margin-block-end: 0;
     font-weight: 700;
     margin-bottom: 30px;
-    font-size: 65px;
+    font-size: 3em;
     color: #555;
     text-align: center;
     font-family: 'Roboto', sans-serif;
@@ -33,14 +76,18 @@ h2 {
     justify-content: space-around;
     max-width: 1180px;
     margin: 0 auto;
+    text-align: left;
+    
 
+    
     #submit {
         position: absolute;
-        top: 50%;
+        top: 600px;
         left: calc(50% - 125px);
         width: 250px;
         height: 40px;
         font-family: 'Roboto';
+        cursor: pointer;
     }
 
     input {
@@ -56,4 +103,49 @@ h2 {
         font-family: 'Roboto', sans-serif;
         font-weight: 400;
     }
+}
+
+
+// Responsive
+
+
+
+@media screen and (max-width: 900px) {
+    .form-block {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
+        align-items: flex-start;
+
+        div {
+            margin: 0 auto;
+            min-width: 200px;
+        }
+
+        #submit {
+            position: inherit;
+            top: 50%;
+            left: calc(50% - 125px);
+            width: 250px;
+            height: 40px;
+            font-family: 'Roboto';
+            margin-top: 39px;
+            margin-left: 70%;
+        }
+    }
+
+    .bg {
+        height: 100%;
+    }
+    
+}
+
+
+@media screen and (max-width: 620px) {
+    .form-block #submit {
+        margin: 0 auto;
+        margin-top: 30px;
+        margin-bottom: 100px;
+    }
+
+   
 }
