--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 footer {
     max-width: 500px;
     margin: auto;
-    background: white;
+    /* background: white; */
     padding: 10px;
 } 
 .logo img {
