--- a/css/style.scss
+++ b/css/style.scss
@@ -117,7 +117,7 @@ h2 {
         align-items: flex-start;
 
         div {
-            margin: 0 auto;
+            margin: 50px auto;
             min-width: 200px;
         }
 
