--- a/css/style.scss
+++ b/css/style.scss
@@ -2,9 +2,9 @@
 
 
 .clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
+    content: "";
+    display: table;
+    clear: both;
 }
 
 .bg {
@@ -27,35 +27,35 @@
     }
 
     .calc-head {
-        
+
         max-width: 1180px;
         padding-top: 15px;
         margin: 0 auto;
     }
-        
-        .logo {
-            float: left;
-            height: 126px;
-            width: 216px;
-            background-image: url(../img/logo.svg);
-            background-size: cover;
-            background-repeat: no-repeat;
-            margin-left: 7%;   
-        }
 
-        .hello {
-            float: right;
-            margin-right: 7%;
-
-            input {
-                height: 25px;
-                width: 120px;
-                cursor: pointer;
-                margin-bottom: 7px;
-            }
-            
-        }
+    .logo {
+        float: left;
+        height: 126px;
+        width: 216px;
+        background-image: url(../img/logo.svg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        margin-left: 7%;
     }
+
+    .hello {
+        float: right;
+        margin-right: 7%;
+
+        input {
+            height: 25px;
+            width: 120px;
+            cursor: pointer;
+            margin-bottom: 7px;
+        }
+
+    }
+}
 
 
 h2 {
@@ -77,9 +77,9 @@ h2 {
     max-width: 1180px;
     margin: 0 auto;
     text-align: left;
-    
 
-    
+
+
     #submit {
         position: absolute;
         top: 600px;
@@ -88,22 +88,103 @@ h2 {
         height: 40px;
         font-family: 'Roboto';
         cursor: pointer;
+
+        background: rgb(254, 231, 154);
+        background: -moz-linear-gradient(top, rgba(254, 231, 154, 1) 0%, rgba(254, 193, 81, 1) 100%);
+        background: -webkit-linear-gradient(top, rgba(254, 231, 154, 1) 0%, rgba(254, 193, 81, 1) 100%);
+        background: -o-linear-gradient(top, rgba(254, 231, 154, 1) 0%, rgba(254, 193, 81, 1) 100%);
+        background: -ms-linear-gradient(top, rgba(254, 231, 154, 1) 0%, rgba(254, 193, 81, 1) 100%);
+        background: linear-gradient(top, rgba(254, 231, 154, 1) 0%, rgba(254, 193, 81, 1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fee79a', endColorstr='#fec151', GradientType=0);
+        -webkit-border-radius: 30px;
+        -moz-border-radius: 30px;
+        -ms-border-radius: 30px;
+        -o-border-radius: 30px;
+        border-radius: 30px;
+        -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
+        -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
+        -ms-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
+        -o-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
+        box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
+        border: 1px solid #D69E31;
+        color: #85592e;
+        cursor: pointer;
+        font: bold 15px Helvetica, Arial, sans-serif;
+        height: 35px;
+        margin: 20px 0 35px 15px;
+        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+
+        &:hover {
+            background: rgb(254, 193, 81);
+            background: -moz-linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
+            background: -webkit-linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
+            background: -o-linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
+            background: -ms-linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
+            background: linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fec151', endColorstr='#fee79a', GradientType=0);
+        }
     }
 
-    input {
-        margin-right: 0.75em;
-        font-family: 'Roboto';
-        font-size: 20px;
-        margin-bottom: 18px;
-    }
 
-    span {
-        color: #555;
-        text-align: center;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 400;
+}
+
+input {
+    margin-right: 0.75em;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    margin-bottom: 18px;
+}
+
+span {
+    color: #555;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+}
+
+.hello {
+
+    form {
+        input {
+            font-size: 12px;
+
+            background: rgb(254, 231, 154);
+            background: -moz-linear-gradient(top, rgba(254, 231, 154, 1) 0%, rgba(254, 193, 81, 1) 100%);
+            background: -webkit-linear-gradient(top, rgba(254, 231, 154, 1) 0%, rgba(254, 193, 81, 1) 100%);
+            background: -o-linear-gradient(top, rgba(254, 231, 154, 1) 0%, rgba(254, 193, 81, 1) 100%);
+            background: -ms-linear-gradient(top, rgba(254, 231, 154, 1) 0%, rgba(254, 193, 81, 1) 100%);
+            background: linear-gradient(top, rgba(254, 231, 154, 1) 0%, rgba(254, 193, 81, 1) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fee79a', endColorstr='#fec151', GradientType=0);
+            -webkit-border-radius: 30px;
+            -moz-border-radius: 30px;
+            -ms-border-radius: 30px;
+            -o-border-radius: 30px;
+            border-radius: 30px;
+            -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
+            -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
+            -ms-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
+            -o-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
+            box-shadow: 0 1px 0 rgba(255, 255, 255, 0.8) inset;
+            border: 1px solid #D69E31;
+            color: #85592e;
+            cursor: pointer;
+            font: bold 15px Helvetica, Arial, sans-serif;
+            height: 35px;
+            text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+
+            &:hover {
+                background: rgb(254, 193, 81);
+                background: -moz-linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
+                background: -webkit-linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
+                background: -o-linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
+                background: -ms-linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
+                background: linear-gradient(top, rgba(254, 193, 81, 1) 0%, rgba(254, 231, 154, 1) 100%);
+                filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fec151', endColorstr='#fee79a', GradientType=0);
+            }
+        }
     }
 }
+
 
 
 // Responsive
@@ -117,9 +198,10 @@ h2 {
         align-items: flex-start;
 
         div {
-            margin: 50px auto;
+            margin: 25px auto;
             min-width: 200px;
         }
+
 
         #submit {
             position: inherit;
@@ -130,13 +212,15 @@ h2 {
             font-family: 'Roboto';
             margin-top: 39px;
             margin-left: 70%;
+
+
         }
     }
 
     .bg {
         height: 100%;
     }
-    
+
 }
 
 
@@ -147,5 +231,5 @@ h2 {
         margin-bottom: 100px;
     }
 
-   
+
 }
